--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,8 +37,8 @@
        <form name="add">
         <input name="header" placeholder="Заголовок" type="text">
         <input name="description" placeholder="Описание" type="text">
-        <input name="time" placeholder="Время (type=time)" type="text">
-        <input name="day" placeholder="Время (type=date)" type="text">
+        <input name="time" placeholder="Время (type=time)" type="time">
+        <input name="day" placeholder="Время (type=date)" type="date">
         <input name="type_of_task" placeholder="Тип задачи (select - option - new/progress/done)" type="text">
         <button class="form_btn">Добавить</button>
        </form>
