--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,21 @@
         <button class="form_btn">Добавить</button>
        </form>
     </dialog>
+    <dialog class="replacement">
+        <div class="flex_dialog">
+            <h2>Изменить</h2>
+            <button class="close_second">x</button>
+        </div>
+        <form name="change_or_delete">
+    <input name="header" placeholder="Заголовок" type="text">
+    <input name="description" placeholder="Описание" type="text">
+    <input name="time" placeholder="Время (type=time)" type="time">
+    <input name="day" placeholder="Время (type=date)" type="date">
+    <input name="type_of_task" placeholder="Тип задачи (select - option - new/progress/done)" type="text">
+    <button class="form_btn_1">Добавить</button>
+    <button class="form_btn_2">Удалить</button>
+        </form>
+    </dialog>
     <script type="module" src="js/index.js"></script>
 </body>
 </html>
