--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div id="one" class="gate"></div>
     <img draggable="true" class="ball" src="./img/ball.png" alt="">
    <div id="two" class="gate"></div>
-   <canvas id="my-canvas"></canvas>
-   <script src="node_modules/confetti-js/dist/index.min.js"></script>
+   
+   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
