--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.scss">
+  <title>Document</title>
 </head>
 <body>
-    <div class="counter">
-        <p>
-            First team 
-            <br>
-            <span class="span_1">0</span>
-        </p>
-        <img class="restart" src="./img/restart.svg" alt="">
-        <p>
-            Second team 
-            <br>
-            <span class="span_2">0</span>
-        </p>
-    </div>
-    <div id="one" class="gate"></div>
-    <img draggable="true" class="ball" src="./img/ball.png" alt="">
-   <div id="two" class="gate"></div>
-   
-   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
-    <script src="./script.js"></script>
+  
+
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
