--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
   <title>Transport goods for European countries</title>
 </head>
 <body>
-  
+  <section class="one">
+    <div class="wrap">
+      <div class="flex">
+        <div class="first_side">
 
+        </div>
+        <div class="second_side">
+          <div id="one" class="gradiants"></div>
+          <div id="two" class="gradiants"></div>
+          <div id="three" class="gradiants"></div>
+          <div id="four" class="gradiants"></div>
+          <div id="five" class="gradiants"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
   <script type="module" src="/main.js"></script>
 </body>
 </html>
