--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.scss">
+  <script defer type="module" src="/modules/guardian.js"></script>
   <title>Transport goods for European countries</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
       </div>
     </div>
   </section>
-  
+
   <script type="module" src="/main.js"></script>
 </body>
 </html>
