--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 
         </div>
         <div class="second_side">
-          <div id="one" class="gradiants"></div>
-          <div id="two" class="gradiants"></div>
-          <div id="three" class="gradiants"></div>
-          <div id="four" class="gradiants"></div>
-          <div id="five" class="gradiants"></div>
+          <img src="/public/img/left_side.png" alt="">
         </div>
       </div>
     </div>
