--- a/index.html
+++ b/index.html
@@ -12,15 +12,28 @@
     <div class="wrap">
       <div class="flex">
         <div class="first_side">
-
+          <h1>
+            Быстрая доставка <br>
+            товаров из Польши <br>
+            и стран Еврорзоюза <br>
+            в Украину
+          </h1>
+          <p class="assesment">оцени новый уровень в качестве <br>
+            обслуживания и скорости доставки</p>
         </div>
         <div class="second_side">
-          <img src="/public/img/left_side.png" alt="">
+         <!-- <div class="slide" id="one"></div>
+         <div class="slide" id="two"></div>
+         <div class="slide" id="three"></div>
+         <div class="slide" id="four"></div>
+         <div class="slide" id="five"></div> -->
         </div>
       </div>
     </div>
   </section>
-  
+  <div class="container"></div>
+
+
   <script type="module" src="/main.js"></script>
 </body>
 </html>
